overflow issue solved by html and body tag styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,76 +1,34 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap");
 
-
-
 .light {
-  --bg:#fcfcfc;
-  --bg2:#23283e;
-  --primary : #cdcdff;
-  --primary2 : #444;
-  --secondary : #555;
-  --secondary2 : #90a0d9;
-   --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  --bg: #fcfcfc;
+  --bg2: #23283e;
+  --primary: #cdcdff;
+  --primary2: #444;
+  --secondary: #555;
+  --secondary2: #90a0d9;
+  --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .dark {
-  --bg:#23283e;
-  --bg2:#fff;
-  --primary : #cdcdff;
-  --primary2 : #555;
-  --secondary : #cdcdff;
-  --secondary2 : #90a0d9;
-   --shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+  --bg: #23283e;
+  --bg2: #fff;
+  --primary: #cdcdff;
+  --primary2: #555;
+  --secondary: #cdcdff;
+  --secondary2: #90a0d9;
+  --shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
     rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 
-.app{
+.app {
   font-family: Poppins;
   background: var(--bg);
   color: var(--primary);
   padding: 0px 25px 25px;
-  min-height: 100vh;
-  overflow: hidden;
-  max-width: 100%;
 }
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.app-without-p {
+  font-family: Poppins;
+  background: var(--bg);
+  color: var(--primary);
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
