--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,35 @@
   box-sizing: border-box;
 }
 
+/* overflow removed by applying html and body styling */
 html {
+  overflow-x: hidden;
   scroll-behavior: smooth;
 }
+body {
+  width: 100%;
+  overflow: hidden;
+}
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 6px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 h1,
 h2,
 h3,
